fix: steps component align-items property value

--- a/src/components/steps/demo/index.less
+++ b/src/components/steps/demo/index.less
@@ -1,3 +1,6 @@
 .steps-demo {
-  max-width: 800px;
+
+  .fog-steps {
+    max-width: 800px;
+  }
 }
