--- a/src/components/steps/index.less
+++ b/src/components/steps/index.less
@@ -8,7 +8,7 @@
   }
 
   display: flex;
-  align-items: top;
+  align-items: flex-start;
   justify-content: space-between;
   font-size: 14px;
   line-height: 22px;
